--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>delka.com.ar</title>
-</head>
-<body>
-    <h1>delka</h1>
-    <h5>diseno & construccion</h5>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>delka.com.ar</title>
+        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <main>
+            <div class="hero">
+                <video autoplay loop muted plays-inline class="back-video">
+                    <source src="./videos/pexels-richard-he-5348778.mp4" type="video/mp4">
+                </video>
+                <nav>
+                    <img src="./images/logo.png" alt="logo" class="logo" />
+                    <ul>
+                        <li><a href="#">INICIO</a></li>
+                        <li><a href="#">NOSOTROS</a></li>
+                        <li><a href="#">SERVICIOS</a></li>
+                        <li><a href="#">CONTACTO</a></li>
+                    </ul>
+                </nav>
+                <div class="content">
+                    <h1>delka</h1>
+                    <a href="#">Escribinos</a>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
